Revised Search Results further

--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -1775,7 +1775,21 @@ span.resource-name {
 
 .site.results>a {
   display: block;
+  font-size: 1rem;
+  margin-top: 0.5rem;
+  padding-left: 0;
+  text-decoration: underline;
 }
+
+.item.results>a,
+.item-set.results>a {
+  text-decoration: underline;
+}
+
+.item-set.results>ul {
+  margin-bottom: 1rem;
+}
+
 
 /*Breadcrumbs*/
 nav.breadcrumbs {
