--- a/view/omeka/site/item/show.phtml
+++ b/view/omeka/site/item/show.phtml
@@ -28,11 +28,6 @@ $valueLang = $filterLocale ? [$lang, ''] : null;
 // echo "</pre>";
 ?>
 
-<div class="resource-title">
-    <?php echo $this->pageTitle($item->displayTitle(null, $valueLang), 2); ?>
-    <h2 class="label"><?php echo $translate('Item'); ?></h2>
-</div>
-
 <div class="<?php echo ($showLayout == 'inline') ? 'inline' : 'stack'; ?>">
     <?php $this->trigger('view.show.before'); ?>
     <?php if ($fullWidthMainHasBlocks): ?>
@@ -68,6 +63,10 @@ $valueLang = $filterLocale ? [$lang, ''] : null;
         ?>
     <div class="<?php echo ($showLayout == 'inline') ? 'inline' : 'stack'; ?>">
         <div class="full-width grid-x grid-padding-x">
+        <div class="resource-title">
+            <?php echo $this->pageTitle($item->displayTitle(null, $valueLang), 2); ?>
+            <h2 class="label"><?php echo $translate('Item'); ?></h2>
+        </div>
             <?php $this->trigger('view.show.before'); ?>
             <div class="main-with-sidebar cell medium-8 margin-bottom-2 xlarge-margin-bottom-3">
                 <?php 
@@ -113,6 +112,10 @@ $valueLang = $filterLocale ? [$lang, ''] : null;
 
         <?php if ($rightSidebarHasBlocks): ?>
         <div class="right-sidebar cell medium-<?php echo $sidebarWidth; ?> large-padding-1 xlarge-padding-2">
+            <div class="resource-title margin-top-1 large-margin-top-0">
+                <?php echo $this->pageTitle($item->displayTitle(null, $valueLang), 2); ?>
+                <h2 class="label"><?php echo $translate('Item'); ?></h2>
+            </div>
             <?php echo $rightSidebarBlockContent->getBlocks(); ?>
         </div>
         <?php endif; ?>
