--- a/view/common/block-template/los-browse.phtml
+++ b/view/common/block-template/los-browse.phtml
@@ -1,64 +1,28 @@
-<div class="reveal-on-scroll lazy-fade-in">  <!-- Load Effect block -->
-    <div class="list-of-sites">
-        <?php
-        // Get the helper
-        $siteSettingService = $this->getHelperPluginManager()->get('siteSetting');
-
-        // Group arrays
-        $externalSites = [];
-
-        // Categorize sites
-        foreach ($sites as $site) {
-            $featured = $siteSettingService('extended_site_description_featured', null, $site->id());
-            $category = $siteSettingService('extended_site_description_categories', null, $site->id());
-        
-            if (empty($category) || !is_array($category)) continue;
-        
-            // Add site only if it has 'External' in category and NOT featured'
-            if (in_array('External', $category) && !$featured) {
-                $externalSites[] = $site;
-            }
-        }
-
-        // Function to render styled site cards
-        function renderExternalSiteGroup($groupTitle, $groupSites, $thumbnails, $summaries, $view) {
-            if (empty($groupSites)) return;
-        ?>
-
-        <h2 class="site-group-heading"><?php echo htmlspecialchars($groupTitle); ?></h2>
-        <div class="site-list layout-card">
-            <?php foreach ($groupSites as $site) {
-                    $thumbnail = $thumbnails ? $site->thumbnail() : null;
-                    $summary = $summaries ? $site->summary() : null;
-                    ?>
-                    <div class="site card">
-                        <?php if ($thumbnail): ?>
-                            <div class="site-thumbnail">
-                                <?php echo $view->thumbnail($thumbnail, 'square', ['class' => 'site-thumbnail-image']); ?>
-                            </div>
-                        <?php endif; ?>
-
-                        <div class="card-divider">
-                            <?php echo $view->hyperlink($site->title(), $site->siteUrl(), ['class' => 'site-link']); ?>
-                        </div>
-
-                        <?php if ($summary): ?>
-                            <div class="site-summary card-section">
-                                <?php echo nl2br($view->escapeHtml($summary)); ?>
-                            </div>
-                        <?php endif; ?>
-                    </div>
-                    <?php
-                }
-            }
-
-            // Output both groups
-            renderExternalSiteGroup('External Sites', $externalSites, $thumbnails, $summaries, $this);
+<div class="list-of-sites">
+    <div class="site-list layout-card los-browse">
+        <?php foreach($sites as $site): ?>
+            <?php
+            $thumbnail = $thumbnails ? $site->thumbnail() : null;
+            $summary = $summaries ? $site->summary() : null;
             ?>
-        </div>
+            <div class="site card">
+                <?php if ($thumbnail): ?>
+                    <div class="site-thumbnail"><?php echo $this->thumbnail($thumbnail, 'square', ['class' => 'site-thumbnail-image']); ?></div>
+                <?php endif; ?>
 
-        <?php if ($pagination): ?>
-            <?php echo $this->pagination(); ?>
-        <?php endif; ?>
+                <div class="card-divider">
+                    <?php echo $this->hyperlink($site->title(), $site->siteUrl(), ['class' => 'site-link']); ?>
+                </div>
+
+                <?php if ($summary): ?>
+                <div class="site-summary card-section"><?php echo nl2br($this->escapeHtml($summary)); ?></div>
+                <?php endif; ?>
+            </div>
+        <?php endforeach; ?>
     </div>
+    <?php
+    if ($pagination):
+        echo $this->pagination();
+    endif;
+    ?>
 </div>
