Revised asset caption for dark backgrounds

--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -3246,7 +3246,7 @@ section.image-banner {
   }
 }
 
-.dark-background .caption {
+.dark-background .caption.asset-caption {
   border-left: solid rem-calc(6) $warning-color;
 }
 
