--- a/view/omeka/site/item/show.phtml
+++ b/view/omeka/site/item/show.phtml
@@ -21,72 +21,67 @@ $rightSidebarHasBlocks = $rightSidebarBlockContent->hasBlocks();
 $filterLocale = (bool) $this->siteSetting('filter_locale_values');
 $lang = $this->lang();
 $valueLang = $filterLocale ? [$lang, ''] : null;
-
-// Debugging output to inspect viewers
-//echo "<pre>";
-// print_r($viewers);
-// echo "</pre>";
 ?>
+
+<div class="resource-title">
+<?php echo $this->pageTitle($item->displayTitle(null, $valueLang), 2); ?>
+<h3 class="label"><?php echo $translate('Item'); ?></h3>
+</div>
 
 <div class="<?php echo ($showLayout == 'inline') ? 'inline' : 'stack'; ?>">
     <?php $this->trigger('view.show.before'); ?>
     <?php if ($fullWidthMainHasBlocks): ?>
-        <?php 
-        $viewers = [];
-        $youtubeViewer = null;
-        $defaultViewer = null;
-        $firstMedia = true; // Ensure this is defined
-        
-        foreach ($itemMedia as $index => $media) {
-            $mediaType = $media->mediaType();
-            $mediaRenderer = $media->renderer();
-        
-            // Debugging output
-            // echo "Index: $index, Media Renderer: $mediaRenderer, Media Type: $mediaType<br>";
-        
-            if ($firstMedia) {
-                if ($mediaRenderer == 'youtube') {
-                    $viewers[] = 'youtube';
-                    $youtubeViewer = "<div class='responsive-embed widescreen'>" . $media->render() . "</div>";
-                    $firstMedia = false;
-                } else {
-                    $viewers[] = 'default';
-                    $defaultViewer = $media->render();
-                    $firstMedia = false;
-                }
-            } 
-            // else {
-                // Optional logic for additional media
-                //echo "Additional media detected at index $index.<br>";
-            //}
-        }
-        ?>
-    <div class="<?php echo ($showLayout == 'inline') ? 'inline' : 'stack'; ?>">
-        <div class="full-width grid-x grid-padding-x">
-        <div class="resource-title">
-            <?php echo $this->pageTitle($item->displayTitle(null, $valueLang), 2); ?>
-            <h2 class="label"><?php echo $translate('Item'); ?></h2>
+    <div class="full-width-main">
+
+    <?php foreach ($item->media() as $m): ?>
+        <p>
+            <strong>Media Type:</strong> <?= $m->mediaType() ?: 'n/a'; ?><br>
+            <strong>Renderer:</strong> <?= $m->renderer(); ?><br>
+            <strong>Original URL:</strong> <a href="<?= $m->originalUrl(); ?>" target="_blank"><?= $m->originalUrl(); ?></a>
+        </p>
+    <?php endforeach; ?>
+
+    <?php foreach ($item->media() as $media): ?>
+        <div style="margin-bottom: 1em; padding: 0.5em; border: 1px solid #ccc;">
+            <strong>Media ID:</strong> <?= $media->id(); ?><br>
+            <strong>Media Type:</strong> <?= $media->mediaType() ?: 'N/A'; ?><br>
+            <strong>Renderer:</strong> <?= $media->renderer(); ?><br>
+            <strong>Original Filename:</strong> <?= $media->source(); ?><br>
+            <strong>Original URL:</strong> <a href="<?= $media->originalUrl(); ?>" target="_blank"><?= $media->originalUrl(); ?></a>
         </div>
-            <?php $this->trigger('view.show.before'); ?>
-            <div class="main-with-sidebar cell medium-8 margin-bottom-2 xlarge-margin-bottom-3">
-                <?php 
-                // Display the main viewer
-                if ($youtubeViewer !== null) {
-                    echo $youtubeViewer;
-                } 
-                elseif ($defaultViewer !== null) {
-                    echo $defaultViewer;
-                }
-                ?>
-            </div>
-            <div class="right-sidebar cell medium-4 medium-padding-vertical-1 xlarge-padding-horizontal-2">
-                <?php echo $fullWidthMainBlockContent->getBlocks(); ?>
-            </div>
-        </div>
+    <?php endforeach; ?>
+
+    <?php
+$supportedRenderers = ['file', 'youtube', 'pdf', 'iiif_presentation'];
+$validMediaTypes = [];
+
+foreach ($item->media() as $media) {
+    if (in_array($media->renderer(), $supportedRenderers)) {
+        $validMediaTypes[] = $media->mediaType();
+    }
+}
+
+$validMediaTypes = array_unique($validMediaTypes);
+
+if (!empty($validMediaTypes)) {
+    echo $this->octopusViewer()->viewer(
+        [
+            'media_types' => $validMediaTypes,
+            'item_id' => $item->id(),
+        ],
+    );
+}
+else {
+    echo $media->render();
+}
+?>
+
+        <?php echo $fullWidthMainBlockContent->getBlocks(); ?>
     </div>
     <?php endif; ?>
 
     <?php if ($mainWithSidebarHasBlocks || $leftSidebarHasBlocks || $rightSidebarHasBlocks): ?>
+    
     <?php 
     if ($leftSidebarHasBlocks && $rightSidebarHasBlocks) {
         $sidebarWidth = '3';
@@ -97,7 +92,7 @@ $valueLang = $filterLocale ? [$lang, ''] : null;
     }
     ?>
     
-    <div class="grid-x grid-margin-x full-width">
+    <div class="grid-x grid-margin-x">
         <?php if ($leftSidebarHasBlocks): ?>
         <div class="left-sidebar cell medium-<?php echo $sidebarWidth; ?>">
             <?php echo $leftSidebarBlockContent->getBlocks(); ?>
@@ -111,11 +106,7 @@ $valueLang = $filterLocale ? [$lang, ''] : null;
         <?php endif; ?>
 
         <?php if ($rightSidebarHasBlocks): ?>
-        <div class="right-sidebar cell medium-<?php echo $sidebarWidth; ?> large-padding-1 xlarge-padding-2">
-            <div class="resource-title margin-top-1 large-margin-top-0">
-                <?php echo $this->pageTitle($item->displayTitle(null, $valueLang), 2); ?>
-                <h2 class="label"><?php echo $translate('Item'); ?></h2>
-            </div>
+        <div class="right-sidebar cell medium-<?php echo $sidebarWidth; ?>">
             <?php echo $rightSidebarBlockContent->getBlocks(); ?>
         </div>
         <?php endif; ?>
