--- a/view/omeka/site/item/show.phtml
+++ b/view/omeka/site/item/show.phtml
@@ -52,28 +52,38 @@ $valueLang = $filterLocale ? [$lang, ''] : null;
     <?php endforeach; ?>
 
     <?php
-$supportedRenderers = ['file', 'youtube', 'pdf', 'iiif_presentation'];
-$validMediaTypes = [];
+$excludedRenderers = ['html', 'webvtt', 'iiif'];
+$allowedMediaTypes = [];
+$hasRenderable = false;
 
+// First pass: collect allowed types and check for non-excluded media
 foreach ($item->media() as $media) {
-    if (in_array($media->renderer(), $supportedRenderers)) {
-        $validMediaTypes[] = $media->mediaType();
+    if (!in_array($media->renderer(), $excludedRenderers)) {
+        $allowedMediaTypes[] = $media->mediaType();
+        $hasRenderable = true;
     }
 }
 
-$validMediaTypes = array_unique($validMediaTypes);
+// De-duplicate media types
+$allowedMediaTypes = array_unique($allowedMediaTypes);
 
-if (!empty($validMediaTypes)) {
+// Then call Octopus Viewer for those types only
+if ($hasRenderable && !empty($allowedMediaTypes)) {
     echo $this->octopusViewer()->viewer(
         [
-            'media_types' => $validMediaTypes,
+            'media_types' => $allowedMediaTypes,
             'item_id' => $item->id(),
         ],
     );
 }
-else {
-    echo $media->render();
+
+// Fallback: render excluded items manually
+foreach ($item->media() as $media) {
+    if (in_array($media->renderer(), $excludedRenderers)) {
+        echo $media->render();
+    }
 }
+
 ?>
 
         <?php echo $fullWidthMainBlockContent->getBlocks(); ?>
