Removed Ref. from Text Only Media Embed

--- a/view/common/block-template/media-text-only.phtml
+++ b/view/common/block-template/media-text-only.phtml
@@ -77,7 +77,7 @@ $lang = $filterLocale ? $this->lang() : null;
                 if ($identifier): ?>
                     <div class="flex-container width-100">
                         <h2 class="h4 identifier flex-container margin-vertical-1 align-left">
-                            <small><?php echo "Ref. " . $identifier; ?></small>
+                            <small><?php echo $identifier; ?></small>
                         </h2>
                     </div>
                 <?php endif; ?>
