--- a/view/common/block-template/los-card-library.phtml
+++ b/view/common/block-template/los-card-library.phtml
@@ -1,5 +1,5 @@
 <div class="reveal-on-scroll lazy-fade-in">  <!-- Load Effect block -->
-    <div class="list-of-sites">
+    <div class="list-of-sites list-of-sites-mosaic">
         <?php
         // Get the helper
         $siteSettingService = $this->getHelperPluginManager()->get('siteSetting');
