--- a/view/common/block-template/los-card-featured-mosaic.phtml
+++ b/view/common/block-template/los-card-featured-mosaic.phtml
@@ -6,23 +6,17 @@
 
         // Group arrays
         $featuredSites = [];
-
-        // Categorize sites
         foreach ($sites as $site) {
             $featured = $siteSettingService('extended_site_description_featured', null, $site->id());
-            $category = $siteSettingService('extended_site_description_categories', null, $site->id());
-        
-            if (empty($category) || !is_array($category)) continue;
-
-            // Add site only if it has 'External' in category and NOT featured'
-            if (in_array('External', $category) && !$featured) {
+            
+            if ($featured) {
                 $featuredSites[] = $site;
             }
-            $featuredCount = count($featuredSites);
         }
+        $featuredCount = count($featuredSites);
 
         // Function to render styled site cards
-        function renderExternalSiteGroup($groupTitle, $groupSites, $thumbnails, $summaries, $view, $siteCount) {
+        function renderFeaturedSiteGroup($groupTitle, $groupSites, $thumbnails, $summaries, $view, $siteCount) {
             if (empty($groupSites)) return;
         ?>
 
@@ -58,7 +52,7 @@
             }
 
             // Output both groups
-            renderExternalSiteGroup('External Sites', $featuredSites, $thumbnails, $summaries, $this, $featuredCount);
+            renderFeaturedSiteGroup('Featured Sites', $featuredSites, $thumbnails, $summaries, $this, $featuredCount);
             ?>
         <?php echo '</div>'; ?>
 
