--- a/view/common/block-template/los-card-external-mosaic.phtml
+++ b/view/common/block-template/los-card-external-mosaic.phtml
@@ -57,6 +57,15 @@
                 }
             }
 
+            if (count($externalSites) > 6): ?>
+                <div class="view-all-link">
+                <a href="<?php echo $this->url('site/page', ['site-slug' => 'home', 'page-slug' => 'browse']); ?>">
+                        View All Research Sites
+                    </a>
+                </div>
+            <?php endif; ?>
+
+            <?php
             // Output both groups
             renderExternalSiteGroup('External Sites', $externalSites, $thumbnails, $summaries, $this, $externalCount);
             ?>
