Updated external to Research

--- a/view/common/block-template/los-card-external-browse.phtml
+++ b/view/common/block-template/los-card-external-browse.phtml
@@ -1,4 +1,4 @@
-<div class="full-width"  id="los-external-browse">    
+<div class="full-width"  id="los-research-browse">    
     <div class="grid-container reveal-on-scroll lazy-fade-in padding-top-1">  <!-- Load Effect block -->
     <h2 class="subheader site-group-heading margin-vertical-1">Browse Research Exhibitions</h2>
         <div class="site-list layout-card los-browse">
