--- a/view/common/block-template/los-card-external-mosaic.phtml
+++ b/view/common/block-template/los-card-external-mosaic.phtml
@@ -72,7 +72,7 @@
                 <a href="<?php echo $this->url('site/page', [
                     'site-slug' => 'home',
                     'page-slug' => 'browse'
-                ]); ?>#los-external-browse" class="button warning margin-vertical-1">
+                ]); ?>#los-research-browse" class="button warning margin-vertical-1">
                     View All Research Sites
                 </a>
             </div>
