Re-instated commit from 4-1-file

--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -3247,7 +3247,7 @@ section.image-banner {
   }
 }
 
-.dark-background .caption.asset-caption {
+.dark-background .caption {
   border-left: solid rem-calc(6) $warning-color;
 }
 
